--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -4,7 +4,7 @@
       <img src="./images/images/chery.png" alt="chery">
     </div>
     <h2 class="tytle_product">
-      НАШІ ПЕРЕВАГИ
+      МОЇ ПЕРЕВАГИ
     </h2>
     <div class="box_our_benefits">
       <div class="our_benefits">
