--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -39,4 +39,6 @@
       </address>
     </div>
   </div>
+  <img src="./images/images/muka-ege.png" alt="bread" class="bread_with_egg">
+  <img src="./images/images/ingredients.png" alt="bread" class="bread_with_cheese">
 </footer>
