--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -1,6 +1,6 @@
 <div class="backdrop" id="html">
   <div class="modal">
-    <button type="button" data-atribute="close"></button>
+    <button type="button" data-atribute="close" id="close"></button>
     <h5 class="title_modal">Переваги</h5>
     <div class="text_modal">
       <p class="benefits"><span class="subtitle_modal">HTML</span>
@@ -51,7 +51,7 @@
 
 <div class="backdrop" id="css">
   <div class="modal">
-    <button type="button" data-atribute="close"></button>
+    <button type="button" data-atribute="close" id="close"></button>
     <h5 class="title_modal">Переваги</h5>
     <div class="text_modal">
       <p>Ось кілька переваг використання<span class="subtitle_modal"> CSS</span> веб-розробкою:</p>
@@ -102,7 +102,7 @@
 
 <div class="backdrop" id="js">
   <div class="modal">
-    <button type="button" data-atribute="close"></button>
+    <button type="button" data-atribute="close" id="close"></button>
     <h5 class="title_modal">Переваги</h5>
     <div class="text_modal">
       <p class="benefits">Ось кілька переваг використання<span class="subtitle_modal"> JavaScript</span> у
@@ -160,9 +160,60 @@
 </div>
 
 
+<div class="backdrop" id="sass">
+  <div class="modal">
+    <button type="button" data-atribute="close" id="close"></button>
+    <h5 class="title_modal">Переваги</h5>
+    <div class="text_modal">
+      <p class="benefits">Ось кілька переваг використання<span class="subtitle_modal"> Sass</span></p>
+
+      <p class="benefits"><span class="subtitle_modal">- Зручний синтаксис:</span> Sass використовує менш складний і
+        більш елегантний синтаксис порівняно з чистим CSS. Він дозволяє використовувати
+        змінні, вкладені селектори, міксини та інші конструкції, що полегшують розробку та підтримку коду.</p>
+
+      <p class="benefits"><span class="subtitle_modal">- Змінні:</span>
+        Sass дозволяє використовувати змінні для зберігання значень, таких як кольори, розміри шрифтів і т.д. Це
+        полегшує
+        управління стилями та швидше змінювати їх весь сайт.
+      </p>
+
+      <p class="benefits"><span class="subtitle_modal">- Вкладені селектори:</span>
+        Можливість вкладати селектори в Sass полегшує структуру коду і робить його більш зрозумілим та модульним.</p>
+
+      <p class="benefits"><span class="subtitle_modal">- Міксіни:</span>
+        Sass дозволяє використовувати міксини, що є фрагментами CSS-коду, які можна використовувати повторно. Це
+        дозволяє
+        зменшити дублювання коду та полегшує підтримку.
+      </p>
+
+      <p class="benefits"><span class="subtitle_modal">- Функції та операції:</span>
+        Sass додає функціональність до CSS, включаючи вбудовані функції та можливість використовувати математичні
+        операції
+        безпосередньо в коді.</p>
+
+      <p class="benefits"><span class="subtitle_modal">- Легше управління кодом:</span>
+        Sass дозволяє розділити CSS-код на кілька файлів, що полегшує організацію та управління проектами з великою
+        кількістю
+        стилів.</p>
+
+      <p class="benefits"><span class="subtitle_modal">- Підтримка мови програмування: </span>
+        Sass має свою власну мову програмування зі змінними, циклами та умовами, що робить можливим більш потужне та
+        гнучке
+        управління стилями.
+      </p>
+
+
+      <p class="benefits">Використання Sass може значно полегшити та прискорити розробку веб-сайтів, зробивши код більш
+        зрозумілим, модульним та
+        легко підтримуваним.</p>
+    </div>
+  </div>
+</div>
+
+
 <div class="backdrop" id="react">
   <div class="modal">
-    <button type="button" data-atribute="close"></button>
+    <button type="button" data-atribute="close" id="close"></button>
     <h5 class="title_modal">Переваги</h5>
     <div class="text_modal">
       <p class="benefits">Ось кілька переваг використання<span class="subtitle_modal"> React</span></p>
