--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -4,85 +4,77 @@
     <div class="img_cup">
       <img src="images/images/cup-smal.png" alt="cup" class="cup">
     </div>
-    <div class="about_value">
-      <p>
-        Фабрика ТМ «Чарівна Мозаїка» кожен день<br>вдосконалює свою майстерність<br> і тому – кондитерська фабрика
-        «Чарівна
-        Мозаїка»<br>
-        гарантує високу якість своїх виробів!
-      </p>
-      <p>
-        Тут Ви зможете перейти за посиланням на мої роботи
-      </p>
-    </div>
-    <div class="show_at_project">
-      <div class="arrow">
-        <h5 class="hidden">Подивись на мої проєкти які знаходяться нижче. Вони сховані під тортами</h5>
-      </div>
-    </div>
     <div class="our_project">
-      <img src="./images/images/border-video.png" alt="border" class="border_project">
       <ul class="box_project">
         <li class="project_element">
+          <a href="https://evgeniy210191.github.io/zooportal/">
+            <img src="./images/images/zooportal.png" alt="some">
+          </a>
+          <p class="sign_project">Zooportal</p>
+        </li>
+        <li class="project_element">
+          <a href="https://evgeniy210191.github.io/portfolio/">
+            <img src="./images/images/office.png" alt="some">
+          </a>
+          <p class="sign_project">Office</p>
+        </li>
+        <li class="project_element">
           <a href="https://evgeniy210191.github.io/test-task/">
-            <img src="./images/images/cace.jpg" alt="some">
+            <img src="./images/images/test-task.png" alt="some">
           </a>
           <p class="sign_project">My first test task</p>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/ice-cream/">
-            <img src="./images/images/cace1.avif" alt="some">
+            <img src="./images/images/ice-creame.png" alt="some">
           </a>
           <p class="sign_project">Ice cream</p>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/registration-user/">
-            <img src="./images/images/cace2.jpg" alt="some">
+            <img src="./images/images/sign-up.png" alt="some">
           </a>
           <p class="sign_project">Registration user</p>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/movies/">
-            <img src="./images/images/cace3.jpg" alt="some">
+            <img src="./images/images/movies.png" alt="some">
           </a>
           <p class="sign_project">Movies</p>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/feedback/">
-            <img src="./images/images/cace-11.png" alt="some">
+            <img src="./images/images/feedback.png" alt="some">
           </a>
           <p class="sign_project">Feedback</p>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/images/">
-            <img src="./images/images/cake-8.png" alt="some">
+            <img src="./images/images/images.png" alt="some">
           </a>
           <p class="sign_project">Images</p>
         </li>
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/portfolio/">
-            <img src="./images/images/cake-7.png" alt="some">
-          </a>
-          <p class="sign_project">Portfolio</p>
-        </li>
-        <li class="project_element">
-          <a href="https://evgeniy210191.github.io/zooportal/">
-            <img src="./images/images/cace7.avif" alt="some">
-          </a>
-          <p class="sign_project">Zooportal</p>
-        </li>
-        <li class="project_element">
           <a href="https://github.com/evgeniy210191">
-            <img src="./images/images/cace6.avif" alt="some">
+            <img src="./images/images/git.png" alt="some">
           </a>
           <p class="sign_project">My gitHub</p>
         </li>
       </ul>
-      <button type="button" class="switch_project" data-atribute="prev-switch"></button>
-      <button type="button" class="switch_project" data-atribute="next-switch"></button>
     </div>
-    <img src="./images/images/muka-ege.png" alt="bread" class="bread_with_egg">
-    <img src="./images/images/ingredients.png" alt="bread" class="bread_with_cheese">
-
+    <div class="about_value">
+      <div class="border_progect">
+        <h5 class="hidden">Це мої проєкти, які відображають рівень моєї майстерності</h5>
+      </div>
+      <p>
+        Фабрика ТМ «Чарівна Мозаїка» кожен день<br>вдосконалює свою майстерність<br> і тому – фабрика програмістів
+        «Чарівна
+        Мозаїка»<br>
+        гарантує високу якість своїх виробів!
+      </p>
+      <div class="border_progect">
+        <h5 class="hidden">Це мої проєкти, які відображають рівень моєї майстерності</h5>
+      </div>
+    </div>
   </div>
 </section>
