--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -1,6 +1,6 @@
 <section class="product">
   <div class="container">
-    <h2 class="title_product">НАША ПРОДУКЦІЯ</h2>
+    <h2 class="title_product">MY SKILLS</h2>
     <div class="box_product">
       <div class="book_product">
         <img src="./images/images/book-reserv.png" alt="book">
@@ -33,6 +33,12 @@
               <h4>Мова програмування</h4>
               <p><span>JavaScript (JS)</span> є мовою програмування, яка використовується для створення динамічного
                 контенту та інтерактивності на веб-сайтах</p>
+            </li>
+            <li class="about_technique" data-atribute="sass">
+              <h4>Препроцесор</h4>
+              <p><span>"Sass" </span> - це препроцесор таблиць стилів (CSS), що надає додатковий функціонал та зручності
+                для написання та управління стилями
+                веб-сайтів.</p>
             </li>
             <li class="about_technique" data-atribute="react">
               <h4>Сучасний фреймворк</h4>
