--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,12 @@
 <footer>
+  <img src="./images/images/muka-ege.png" alt="bread" class="bread_with_egg">
+  <img src="./images/images/ingredients.png" alt="bread" class="bread_with_cheese">
   <div class="container">
     <div class="border_top">
       <img src="./images/images/sweet.png" alt="sweet">
     </div>
     <div class="address">
-      <img src="./images/images/border.png" alt="border">
+      <img src="./images/images/border.png" alt="border" class="adress_img">
       <address>
         <h5>КОНТАКТИ</h5>
         <ul>
@@ -39,6 +41,4 @@
       </address>
     </div>
   </div>
-  <img src="./images/images/muka-ege.png" alt="bread" class="bread_with_egg">
-  <img src="./images/images/ingredients.png" alt="bread" class="bread_with_cheese">
 </footer>
