--- a/src/sass/component/_header.scss
+++ b/src/sass/component/_header.scss
@@ -1,6 +1,7 @@
 h1 {
   font-size: 32px;
   text-align: center;
+  font-family: $flow;
   @media screen and (min-width: 768px) {
     font-size: 72px;
   }
