--- a/src/sass/component/_header.scss
+++ b/src/sass/component/_header.scss
@@ -21,10 +21,12 @@ header {
 
   background-image: linear-gradient(
       to right,
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.4)
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
     ),
-    url('../images/images/board-480.png');
+    url('../images/images/background-480.png');
+  background-size: contain;
+  background-color: #e8f4f3;
   background-position: center;
   background-repeat: no-repeat;
   color: $colorSecondText;
